src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Case Registration</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Canceled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Complaint Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Canceled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Customer Care Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Canceled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Field Service Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Canceled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Modification</fullName>
        <description>Used for case creation for product modification</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Qualify Case Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Canceled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Routesales</fullName>
        <description>This process indicates the routesales process.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Canceled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AccountLocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the account location of the  Physical Asset</description>
        <inlineHelpText>Indicates the account location of the  Physical Asset</inlineHelpText>
        <label>Account Location</label>
        <referenceTo>Apttus_Config2__AccountLocation__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <formula>Account.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Block__c</fullName>
        <formula>AccountLocation__r.Apttus_Config2__AccountId__r.Account_Block__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_Warranty__c</fullName>
        <description>When checked, the warranty was active upon case creation</description>
        <inlineHelpText>When checked, the warranty was active upon case creation</inlineHelpText>
        <label>Active Warranty</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Under Warranty</fullName>
                </value>
                <value>
                    <fullName>Covered by Contract</fullName>
                </value>
                <value>
                    <fullName>No Warranty or Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ActualDeliveryDate__c</fullName>
        <label>Actual Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ActualMovementDate__c</fullName>
        <label>Actual Movement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ActualPickUpDate__c</fullName>
        <label>Actual Pick-Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AddRequiredPartsandMaterials__c</fullName>
        <defaultValue>false</defaultValue>
        <description>KTS-1715: Field responsible to indicate that a service materials and required parts were added manually in the case record</description>
        <label>Add Required Parts and Materials</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Contact_LastName__c</fullName>
        <formula>AccountLocation__r.Additional_Case_Contact__r.LastName</formula>
        <label>Additional Contact LastName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Contact_Salutation__c</fullName>
        <formula>Text(AccountLocation__r.Additional_Case_Contact__r.Salutation)</formula>
        <label>Additional Contact Salutation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Stakeholder_Email__c</fullName>
        <description>Used to send the additional Closure Email to.</description>
        <inlineHelpText>Used to send the additional Closure Email to.</inlineHelpText>
        <label>Additional Stakeholder Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Additional_Stakeholder_has_email__c</fullName>
        <description>Technical: Used in the Additional Stakeholder logic to set the emails on the Case or not. ( only when is TRUE)</description>
        <formula>NOT(ISNULL( AccountLocation__c)) &amp;&amp;
NOT(ISNULL( AccountLocation__r.Additional_Case_Contact__c)) &amp;&amp;
NOT(ISBLANK( AccountLocation__r.Additional_Case_Contact__r.Email )) &amp;&amp;
 AccountLocation__r.StakeholderNotification__c = TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used in the Additional Stakeholder logic to set the emails on the Case or not. ( only when is TRUE)</inlineHelpText>
        <label>Additional Stakeholder has email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agreement_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>LInked Agreement Line Item, so a user can see the details of it while working on a case</description>
        <label>Agreement Line Item</label>
        <referenceTo>Apttus__AgreementLineItem__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>TS: Indicates the agreement related to the case.</description>
        <inlineHelpText>TS: Indicates the agreement related to the case.</inlineHelpText>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AlternativeMachine__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alternative Machine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ApptusOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Order</label>
        <referenceTo>Apttus_Config2__Order__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NOT IN USE AS WE LINK TO Physical Asset instead</description>
        <inlineHelpText>NOT IN USE</inlineHelpText>
        <label>Asset</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Apttus_Config2__AssetLineItem__c.Apttus_Config2__OptionId__r.Family</field>
                <operation>equals</operation>
                <value>Machines</value>
            </filterItems>
            <filterItems>
                <field>Apttus_Config2__AssetLineItem__c.Apttus_Config2__IsPrimaryLine__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Apttus_Config2__AssetLineItem__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assethaslocation__c</fullName>
        <description>Technical field: The asset is linked to an Account location so the system can  retrieve details of it.</description>
        <formula>PhysicalAsset__c  &lt;&gt; NULL &amp;&amp;

PhysicalAsset__r.AccountLocation__c  &lt;&gt; NULL</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The asset is linked to an Account location so the system can  retrieve details of it.</inlineHelpText>
        <label>Asset has location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AssignToQueue__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Use Routing Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AssignedStartDate__c</fullName>
        <description>Indicates the assigned start date given by planning. Will be the earliest start date in case of multiple jobs for the same case.</description>
        <inlineHelpText>Indicates the assigned start date given by planning. Will be the earliest start date in case of multiple jobs for the same case.</inlineHelpText>
        <label>Assigned Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BookingAppointmentFinish__c</fullName>
        <description>Latest Time the appointment is  to be planned on as request by the customer while making an appointment</description>
        <inlineHelpText>Latest Time the appointment is  to be planned on as request by the customer while making an appointment</inlineHelpText>
        <label>Booking Appointment Finish</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BookingAppointmentStart__c</fullName>
        <description>Earliest time as requested by the customer  the planner can book it on.</description>
        <inlineHelpText>Earliest time date customer  wants to have the appointment.</inlineHelpText>
        <label>Booking Appointment Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Breakdown__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the machine cannot be fixed anymore.</description>
        <inlineHelpText>Indicates that the machine cannot be fixed anymore.</inlineHelpText>
        <label>Breakdown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BuyerContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the person who was involved from customer side on the deal.</description>
        <inlineHelpText>Indicates the person who was involved from customer side on the deal.</inlineHelpText>
        <label>Buyer Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CalculatedDowntime__c</fullName>
        <description>Indicates how many minutes the machine was down from the start of the alert until the time it was fixed.</description>
        <inlineHelpText>Indicates how many minutes the machine was down from the start of the alert until the time it was fixed.</inlineHelpText>
        <label>Calculated Downtime</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calendar__c</fullName>
        <description>Indicates the Start of a Business Day and the End including any extension when applicable ( taken from the Account Location linked to this Case</description>
        <formula>IF( 
AccountLocation__r.Custom_Service_Hours__c, 
AccountLocation__r.Custom_Service_Hours_Description__c, 


IF( 
NOT(ISBLANK(TEXT(AccountLocation__r.Start_of_Business_Day__c))), 
TEXT(AccountLocation__r.Start_of_Business_Day__c) + &apos; - &apos; + TEXT(AccountLocation__r.End_of_Business_Day__c) + &apos; - &apos; + TEXT(AccountLocation__r.Monday_Exception__c) 
, &quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates the Start of a Business Day and the End including any extension when applicable ( taken from the Account Location linked to this Case</inlineHelpText>
        <label>Calendar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CanGenerateOrder__c</fullName>
        <description>Technical:  KTS 370: Quickly create an Order. This field indicates if the case record can generate an order</description>
        <formula>IF(
	(
		(
			ISPICKVAL(SubType__c, &apos;S10&apos;) || 
			ISPICKVAL(SubType__c, &apos;S15&apos;) ||
			ISPICKVAL(SubType__c, &apos;S30&apos;) ||
			ISPICKVAL(SubType__c, &apos;S31&apos;) ||
			ISPICKVAL(SubType__c, &apos;S40&apos;) ||
			ISPICKVAL(SubType__c, &apos;S41&apos;) ||
			ISPICKVAL(SubType__c, &apos;S43&apos;) ||
			ISPICKVAL(SubType__c, &apos;S53&apos;) ||
			ISPICKVAL(SubType__c, &apos;S51&apos;) ||
			ISPICKVAL(SubType__c, &apos;S52&apos;) ||
			ISPICKVAL(SubType__c, &apos;S44&apos;) ||
			ISPICKVAL(SubType__c, &apos;S50&apos;)
			) &amp;&amp;  

		!ISBLANK(AccountLocation__c) &amp;&amp; 
		!ISBLANK(AccountId) &amp;&amp; 
		!ISBLANK(ContactId)
		),
	TRUE, 
	IF(
		(
			(
				ISPICKVAL(SubType__c, &apos;S32&apos;) ||
				ISPICKVAL(SubType__c, &apos;S20&apos;) ||
				ISPICKVAL(SubType__c, &apos;S60&apos;)			
				) &amp;&amp; 
			!ISBLANK( PhysicalAsset__c ) &amp;&amp; 
			!ISBLANK(AccountLocation__c) &amp;&amp;
			!ISBLANK(AccountId) &amp;&amp; 
			!ISBLANK(ContactId)),
		TRUE,
		IF(
				ISPICKVAL(SubType__c, &apos;S22&apos;) &amp;&amp; 
				!ISBLANK( PhysicalAsset__c ) &amp;&amp; 
				!ISBLANK(AccountLocation__c),
				TRUE,
				FALSE
				)
			)
	)</formula>
        <label>Can Generate Order?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CancelationReason__c</fullName>
        <description>Indicates the reason for cancelation.</description>
        <inlineHelpText>Please Indicate the reason for cancelation.</inlineHelpText>
        <label>Cancelation Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CaseExternalReference__c</fullName>
        <description>Serves as a foreign key for relating other objects in terms of executing DML statements. Used in Sales Triggers</description>
        <inlineHelpText>Serves as a foreign key for relating other objects in terms of executing DML statements. Used in Sales Triggers</inlineHelpText>
        <label>Case External Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseQualificationDate__c</fullName>
        <description>The date/time when the case has been Qualified into a Field Service , Complaint or  customer Care Case</description>
        <inlineHelpText>The date/time when the case has been Qualified into a Field Service , Complaint or  customer Care Case</inlineHelpText>
        <label>Case Qualification Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CaseSource__c</fullName>
        <description>Secondary indication of the Origin of the Case</description>
        <inlineHelpText>Secondary indication of the Origin of the Case</inlineHelpText>
        <label>Case Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CaseSubStatus__c</fullName>
        <description>More Detailed status</description>
        <inlineHelpText>More Detailed status for case records</inlineHelpText>
        <label>Case Sub-Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Order Open</fullName>
                </value>
                <value>
                    <fullName>Order Sent to Planning</fullName>
                </value>
                <value>
                    <fullName>Order Sent to Field</fullName>
                </value>
                <value>
                    <fullName>Review Needed</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Awaiting Customer Feedback</fullName>
                </value>
                <value>
                    <fullName>Awaiting Customer Approval</fullName>
                </value>
                <value>
                    <fullName>Awaiting Internal Feedback</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Closed_Manually__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show if the case is closed manually</description>
        <inlineHelpText>Shows whether the case is closed manually</inlineHelpText>
        <label>Case Closed Manually</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cause__c</fullName>
        <description>Indicates the why the customer complaint.</description>
        <inlineHelpText>Indicates the why the customer complaint.</inlineHelpText>
        <label>Cause</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>Basic service package not working</fullName>
                </value>
                <value>
                    <fullName>Behavior employee</fullName>
                </value>
                <value>
                    <fullName>Behavior engineer</fullName>
                </value>
                <value>
                    <fullName>Behavior routesales</fullName>
                </value>
                <value>
                    <fullName>Behavior transporte</fullName>
                </value>
                <value>
                    <fullName>Bill to party</fullName>
                </value>
                <value>
                    <fullName>Cleaning</fullName>
                </value>
                <value>
                    <fullName>Credit note not received</fullName>
                </value>
                <value>
                    <fullName>Customer not ready</fullName>
                </value>
                <value>
                    <fullName>Damaged</fullName>
                </value>
                <value>
                    <fullName>Delivery not complete</fullName>
                </value>
                <value>
                    <fullName>End of business / New owner</fullName>
                </value>
                <value>
                    <fullName>End of contract period</fullName>
                </value>
                <value>
                    <fullName>Equipment is not working right</fullName>
                </value>
                <value>
                    <fullName>Free of Charge</fullName>
                </value>
                <value>
                    <fullName>HHT / PDA error</fullName>
                </value>
                <value>
                    <fullName>Leakage</fullName>
                </value>
                <value>
                    <fullName>Management expectations service engineer</fullName>
                </value>
                <value>
                    <fullName>Management expectations THD</fullName>
                </value>
                <value>
                    <fullName>Mistake 3rd Party</fullName>
                </value>
                <value>
                    <fullName>Mistake customer</fullName>
                </value>
                <value>
                    <fullName>Mistake engineer</fullName>
                </value>
                <value>
                    <fullName>Mistake FO</fullName>
                </value>
                <value>
                    <fullName>Mistake sales</fullName>
                </value>
                <value>
                    <fullName>New owner</fullName>
                </value>
                <value>
                    <fullName>No equipment</fullName>
                </value>
                <value>
                    <fullName>Not called for appointment</fullName>
                </value>
                <value>
                    <fullName>Not known</fullName>
                </value>
                <value>
                    <fullName>Not on agreed date/time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChildOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This indicates the reference to the installation order when an external movement is required.</description>
        <inlineHelpText>This indicates the reference to the installation order when an external movement is required.</inlineHelpText>
        <label>Child Order</label>
        <referenceTo>Apttus_Config2__Order__c</referenceTo>
        <relationshipLabel>Cases (Child Order)</relationshipLabel>
        <relationshipName>ChildOrderCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Click__c</fullName>
        <description>Indicates the list of Countries using Click ( A.k.a Template 3 countries)</description>
        <formula>IF(OR(
ISPICKVAL( SalesOrganization__c, &apos;SAP_6864&apos;),
ISPICKVAL( SalesOrganization__c, &apos;SAP_0333&apos;),
ISPICKVAL( SalesOrganization__c, &apos;SAP_0975&apos;),
ISPICKVAL( SalesOrganization__c, &apos;SAP_0111&apos;),
ISPICKVAL( SalesOrganization__c, &apos;SAP_6712&apos;)),
TRUE, FALSE)</formula>
        <inlineHelpText>Inidcates the list of Countries using Click ( A.k.a Template 3 countries)</inlineHelpText>
        <label>Click</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CoffeeIsRunning__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the machine provides coffee and is referred to a breakdown request as indicated by the Customer</description>
        <inlineHelpText>Indicates whether the machine provides coffee and is referred to a breakdown request as indicated by the Customer</inlineHelpText>
        <label>Coffee is Running</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CommunicationPreference__c</fullName>
        <description>The way how customers would like to be contacted for notifications from Technical Services.</description>
        <inlineHelpText>The way how customers would like to be contacted for notifications from Technical Services.</inlineHelpText>
        <label>Communication Preference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CompletedCaseClosure__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Technical Field:  Indicates hat a back ground process for closing the case has been completed</description>
        <inlineHelpText>Technical Field:  Indicates hat a back ground process for closing the case has been completed</inlineHelpText>
        <label>Completed Case Closure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CompletedFirstResponse__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Technical: Indicates that the firs response milestones was completed so that the flow can set the next one.</description>
        <inlineHelpText>Technical: Indicates that the firs response milestones was completed so that the flow can set the next one.</inlineHelpText>
        <label>Completed First Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CompletionCode__c</fullName>
        <description>Indicates how the Case was solved</description>
        <inlineHelpText>Indicates how the Case was solved</inlineHelpText>
        <label>Completion Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>100</fullName>
                    <label>100 - Completed, At Location</label>
                </value>
                <value>
                    <fullName>110</fullName>
                    <label>110 - Not Completed, No Parts</label>
                </value>
                <value>
                    <fullName>120</fullName>
                    <label>120 - Completed, No Problem Found</label>
                </value>
                <value>
                    <fullName>130</fullName>
                    <label>130 - Completed, Wrong Treatment Cust.</label>
                </value>
                <value>
                    <fullName>140</fullName>
                    <label>140 – Completed, Fixed By Phone</label>
                </value>
                <value>
                    <fullName>150</fullName>
                    <label>150 - Not Completed, Too Expensive</label>
                </value>
                <value>
                    <fullName>160</fullName>
                    <label>160 - Completed, Customer Request</label>
                </value>
                <value>
                    <fullName>170</fullName>
                    <label>170 - Not Completed, Int. Spec. Req.</label>
                </value>
                <value>
                    <fullName>180</fullName>
                    <label>180 - Not Completed, Ext. Spec. Req.</label>
                </value>
                <value>
                    <fullName>190</fullName>
                    <label>190 - Not Completed, Cust. Not Present</label>
                </value>
                <value>
                    <fullName>200</fullName>
                    <label>200 - Install Not Completed, Fault JDEP</label>
                </value>
                <value>
                    <fullName>210</fullName>
                    <label>210 - Install Not Completed, Due Cust.</label>
                </value>
                <value>
                    <fullName>220</fullName>
                    <label>220 - Install completed with flaw</label>
                </value>
                <value>
                    <fullName>230</fullName>
                    <label>230 - Completed, Wrong Treatment Operator</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContactPersonSecondAddress__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the contact person who needs to be contacted for the second address.</description>
        <inlineHelpText>Indicates the contact person who needs to be contacted for the second address.</inlineHelpText>
        <label>Contact Person Second Address</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (Contact Person Second Address)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_EMail_setting__c</fullName>
        <description>Indicates whether the linked contact has the Language set  so the right email template can be used</description>
        <formula>ContactId &lt;&gt; NULL &amp;&amp;
NOT(ISBLANK(TEXT(Contact.Preferred_Language__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates whether the linked contact has the Language set  so the right email template can be used</inlineHelpText>
        <label>Contact EMail setting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Lastname__c</fullName>
        <formula>Contact.LastName</formula>
        <label>Contact Lastname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CostIndicationAsDiscussed__c</fullName>
        <description>Indicates the costs which were initially discussed with the customer upon case intake.</description>
        <inlineHelpText>Indicates the costs which were initially discussed with the customer upon case intake.</inlineHelpText>
        <label>Cost Indication as Discussed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CountryCode__c</fullName>
        <description>Indicates the country in which the record is created, this is used for Sharing and visibility to the right set of users.</description>
        <inlineHelpText>Indicates the country in which the record is created, this is used for Sharing and visibility to the right set of users.</inlineHelpText>
        <label>Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PKL_CountryCode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country_Setting_Signature_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to dynamically retrieve information from the country setting record using for email signatures first.</description>
        <inlineHelpText>This field is used to dynamically retrieve information from the country setting record using for email signatures first.</inlineHelpText>
        <label>Country Setting Signature Record</label>
        <referenceTo>CountrySetting__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreatedOrderedManually__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Work Order Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <description>Returns the Date equivalent of the CreatedDate field( which is Datetime)</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Returns the Date equivalent of the CreatedDate field( which is Datetime)</inlineHelpText>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CreditMemo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the credit note/memo for a particular complaint.</description>
        <inlineHelpText>Indicates the credit note/memo for a particular complaint.</inlineHelpText>
        <label>Credit Memo</label>
        <referenceTo>Apttus_Billing__CreditMemo__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomerScheduleDate__c</fullName>
        <label>Customer Schedule Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Case_ID__c</fullName>
        <label>Customer Case ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_From_Address__c</fullName>
        <description>Technical: used to  show the user only the  rigth customer support email address when  sending email from the Case feed</description>
        <inlineHelpText>Technical: used to  show the user only the  rigth customer support email address when  sending email from the Case feed</inlineHelpText>
        <label>Default From Address</label>
        <type>Email</type>
    </fields>
</CustomObject>